13 dec
with Ioana working together (mostly her bcs she is smart)